# preprocessor

./: .pylintrc  Dockerfile  README.md  diabetes.py  hiv.py  main.py  notebook.ipynb  pregnancy.py  pyproject.toml  side_effects.py  snomed_code_lookup.py
rules/: allergy.py  diabetes.py  hiv.py  interaction.py  pregnancy.py  side_effects.py
