[tool.poetry]
name = "preprocessor"
version = "0.1.0"
description = ""
authors = ["Alejandro Alonso Lopez <aalonsopersonal@gmail.com> <aalonso@lst.tfo.upm.es>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
medspacy = "^1.2.0"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
