[tool.poetry]
name = "preprocessor"
version = "0.1.0"
description = ""
authors = ["Alejandro Alonso Lopez <aalonsopersonal@gmail.com> <aalonso@lst.tfo.upm.es>"]
readme = "README.md"
package-mode = false
repository = "https://github.com/aalonsolopez/preprocessor"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
medspacy = "^1.2.0"
beautifulsoup4 = "^4.12.3"
fastapi = "^0.112.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
